--- a/Interface/CSS/Wallet.css
+++ b/Interface/CSS/Wallet.css
@@ -3,7 +3,7 @@
     height: 92dvh;
     width: 100dvw;
     background-color: #111;
-    top: 8dvh;
+    bottom: 0;
     color: #0f0;
     text-align: center;
 }
