--- a/Interface/CSS/mHeader.css
+++ b/Interface/CSS/mHeader.css
@@ -46,7 +46,7 @@ header::after {
     left: 50%;
     transform: translateX(-50%);
     padding-top: 1.6dvh;
-    font-size: 1.37rem;
+    font-size: 4dvh;
     font-weight: bold;
     font-family: monospace;
     background: linear-gradient(90deg, #f7931a, #345D9D, #cb9800, #33ff00, #870087, #f7931a);
@@ -162,4 +162,8 @@ header::after {
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
+}
+
+main {
+    padding-top: 8dvh;
 }
